Until Regression working

--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,25 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.17.0\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "2.15.0\n"
      ]
     }
    ],
@@ -43,17 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "##  the ANN trained model ,scalar pickle ,one hot\n",
     "model = load_model('model.h5')\n",
@@ -65,7 +46,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##  the ANN trained model ,scalar pickle ,one hot\n",
+    "model = load_model('model.h5')\n",
+    "\n",
+    "##load the encoder and scaler \n",
+    "with open('label_encoder_gender.pk1','rb') as file:\n",
+    "    label_encoder_gender = pickle.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,14 +100,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\dgkgo\\desktop\\generativeai\\venv\\Lib\\site-packages\\sklearn\\base.py:493: UserWarning: X does not have valid feature names, but OneHotEncoder was fitted with feature names\n",
+      "/workspaces/Prediction_Based_on_customer_data/venv/lib/python3.9/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but OneHotEncoder was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
     },
@@ -158,7 +153,7 @@
        "0               1.0                0.0              0.0"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +229,7 @@
        "0          1               1        101348.88  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +303,7 @@
        "0          1               1        101348.88  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +395,7 @@
        "0              0.0  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +417,7 @@
        "        -0.57946723, -0.57638802]])"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,37 +430,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:5 out of the last 5 calls to <function TensorFlowTrainer.make_predict_function.<locals>.one_step_on_data_distributed at 0x000001F298C33560> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:5 out of the last 5 calls to <function TensorFlowTrainer.make_predict_function.<locals>.one_step_on_data_distributed at 0x000001F298C33560> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 220ms/step\n"
+      "1/1 [==============================] - 0s 57ms/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[0.36545473]], dtype=float32)"
+       "array([[0.33819658]], dtype=float32)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,16 +468,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.36545473"
+       "0.33819658"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +516,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -549,7 +530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
