--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -593,24 +593,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[1., 0., 0.],\n",
-       "       [0., 0., 1.],\n",
-       "       [1., 0., 0.],\n",
-       "       ...,\n",
-       "       [1., 0., 0.],\n",
-       "       [0., 1., 0.],\n",
-       "       [1., 0., 0.]])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m onehot_encoder_geo \u001b[38;5;241m=\u001b[39m OneHotEncoder()\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m## create sparse matrix \u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m geoencoder \u001b[38;5;241m=\u001b[39m onehot_encoder_geo\u001b[38;5;241m.\u001b[39mfit_transform(\u001b[43mdata\u001b[49m[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGeography\u001b[39m\u001b[38;5;124m'\u001b[39m]])\n\u001b[1;32m      6\u001b[0m geoencoder\u001b[38;5;241m.\u001b[39mtoarray()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1312,7 +1307,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1326,7 +1321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
