--- a/RNN_IMPLEMENTATION/simplelearn.ipynb
+++ b/RNN_IMPLEMENTATION/simplelearn.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From d:\\Learn Machine learning\\Prediction_Based_on_customer_data\\prediction_env\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import tensorflow as tf\n",
@@ -16,16 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A local file was found, but it seems to be incomplete or outdated because the auto file hash does not match the original value of 69664113be75683a8fe16e3ed0ab59fda8886cb3cd7ada244f7d9544e4676b9f so we will re-download the data.\n",
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/imdb.npz\n",
-      "17464789/17464789 [==============================] - 4s 0us/step\n",
       "Training dataset shape(25000,), Training labels dataset [1 0 0 ... 0 1 0]\n",
       "Test dataset shape(25000,), Training labels dataset [0 1 1 ... 0 0 0]\n"
      ]
@@ -43,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +275,7 @@
        " 32]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -301,17 +307,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/imdb_word_index.json\n",
-      "1641221/1641221 [==============================] - 1s 1us/step\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -1318,7 +1316,7 @@
        " ...}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1331,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1340,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2349,7 +2347,7 @@
        " ...}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2360,7 +2358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2369,7 +2367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2378,7 +2376,7 @@
        "\"? this film was just brilliant casting ? ? story direction ? really ? the part they played and you could just imagine being there robert ? is an amazing actor and now the same being director ? father came from the same ? ? as myself so i loved the fact there was a real ? with this film the ? ? throughout the film were great it was just brilliant so much that i ? the film as soon as it was released for ? and would recommend it to everyone to watch and the ? ? was amazing really ? at the end it was so sad and you know what they say if you ? at a film it must have been good and this definitely was also ? to the two little ? that played the ? of ? and paul they were just brilliant children are often left out of the ? ? i think because the stars that play them all ? up are such a big ? for the whole film but these children are amazing and should be ? for what they have done don't you think the whole story was so ? because it was true and was ? life after all that was ? with us all\""
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2389,7 +2387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2404,7 +2402,7 @@
        "       [  0,   0,   0, ..., 204, 131,   9]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2418,7 +2416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2465,7 +2463,7 @@
        "        15,  16,   2,  19, 178,  32])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2476,9 +2474,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From d:\\Learn Machine learning\\Prediction_Based_on_customer_data\\prediction_env\\Lib\\site-packages\\keras\\src\\backend.py:873: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "## train our simple RNN\n",
     "model = Sequential()\n",
@@ -2490,14 +2497,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_2\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
@@ -2521,7 +2528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2539,7 +2546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2550,7 +2557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2562,8 +2569,36 @@
       "\n",
       "WARNING:tensorflow:From d:\\Learn Machine learning\\Prediction_Based_on_customer_data\\prediction_env\\Lib\\site-packages\\keras\\src\\engine\\base_layer_utils.py:384: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
       "\n",
-      "625/625 [==============================] - ETA: 0s - loss: 12.2066 - accuracy: 0.5814"
+      "625/625 [==============================] - 97s 150ms/step - loss: 23913439232.0000 - accuracy: 0.5773 - val_loss: 0.6492 - val_accuracy: 0.5952\n",
+      "Epoch 2/10\n",
+      "625/625 [==============================] - 79s 127ms/step - loss: 0.6357 - accuracy: 0.6160 - val_loss: 4982694739968.0000 - val_accuracy: 0.6210\n",
+      "Epoch 3/10\n",
+      "625/625 [==============================] - 83s 134ms/step - loss: 8779942912.0000 - accuracy: 0.5991 - val_loss: 0.6628 - val_accuracy: 0.6104\n",
+      "Epoch 4/10\n",
+      "625/625 [==============================] - 74s 118ms/step - loss: 0.6472 - accuracy: 0.6236 - val_loss: 0.6577 - val_accuracy: 0.6170\n",
+      "Epoch 5/10\n",
+      "625/625 [==============================] - 74s 118ms/step - loss: 0.6420 - accuracy: 0.6293 - val_loss: 0.6525 - val_accuracy: 0.6210\n",
+      "Epoch 6/10\n",
+      "625/625 [==============================] - 69s 110ms/step - loss: 0.6370 - accuracy: 0.6345 - val_loss: 0.6486 - val_accuracy: 0.6248\n",
+      "Epoch 7/10\n",
+      "625/625 [==============================] - 67s 108ms/step - loss: 0.6322 - accuracy: 0.6413 - val_loss: 0.6438 - val_accuracy: 0.6306\n",
+      "Epoch 8/10\n",
+      "625/625 [==============================] - 69s 111ms/step - loss: 0.6275 - accuracy: 0.6439 - val_loss: 0.6392 - val_accuracy: 0.6364\n",
+      "Epoch 9/10\n",
+      "625/625 [==============================] - 71s 113ms/step - loss: 0.6227 - accuracy: 0.6479 - val_loss: 0.6346 - val_accuracy: 0.6406\n",
+      "Epoch 10/10\n",
+      "625/625 [==============================] - 72s 115ms/step - loss: 0.6171 - accuracy: 0.6532 - val_loss: 0.6283 - val_accuracy: 0.6460\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.History at 0x29150a38590>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2573,6 +2608,24 @@
     "    validation_split =0.2,\n",
     "    callbacks = [earlystopping]\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Learn Machine learning\\Prediction_Based_on_customer_data\\prediction_env\\Lib\\site-packages\\keras\\src\\engine\\training.py:3103: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+      "  saving_api.save_model(\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.save('simple_rnn_imdb.h5')\n"
    ]
   },
   {
